# lz77-wasm

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
scripts/: postbuild.js
src/: lib.rs
